[gd_scene load_steps=3 format=3 uid="uid://3v4j8f6k7rre"]

[ext_resource type="Script" uid="uid://d2p1x4lp1cm5m" path="res://normal_horse.gd" id="1_vkv0t"]
[ext_resource type="PackedScene" uid="uid://bqo35voi18fb2" path="res://horse_emotion.tscn" id="2_vkv0t"]

[node name="Horse" type="Node2D"]
script = ExtResource("1_vkv0t")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ChatUI" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatLog" type="TextEdit" parent="ChatUI"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
editable = false
wrap_mode = 1
indent_wrapped_lines = true
scroll_smooth = true

[node name="HBoxContainer" type="HBoxContainer" parent="ChatUI"]
layout_mode = 2

[node name="PlayerInput" type="LineEdit" parent="ChatUI/HBoxContainer"]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2

[node name="SendButton" type="Button" parent="ChatUI/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "send"

[node name="TypingTimer" type="Timer" parent="."]
wait_time = 0.005

[node name="horse_emotion" parent="." instance=ExtResource("2_vkv0t")]
position = Vector2(914, 224)

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ChatUI/HBoxContainer/SendButton" to="." method="_on_send_button_pressed"]
[connection signal="timeout" from="TypingTimer" to="." method="_on_TypingTimer_timeout"]
